Bug 919838 - Specialize ToInt32 for Float32. r=sstangl, a=lsblakk